--- a/HTML/index.html
+++ b/HTML/index.html
@@ -46,7 +46,7 @@
                         <a href="#">News</a>
                         <a href="#">Contact</a>
                     </nav>
-                    <a class="btn-yellow btn-login" href="#">Login <i class="fa-solid fa-arrow-up-right"></i></a>
+                    <a class="btn-yellow" href="#">Login <i class="fa-solid fa-arrow-up-right"></i></a>
                 </div> 
             </div>   
         </div>
@@ -63,6 +63,46 @@
                 <a class="btn-transparent" href="#">Learn more<i class="fa-solid fa-arrow-up-right"></i></a>
             </div>
             <img src="/IMG/Image.png" alt="man holding a ipad">
+        </div>
+    </section>
+
+    <section class="company-showcase">
+        <div class="container">
+            <div class="clients">
+                <img src="/IMG/companyLogos/Page-1.png" alt="">
+                <img src="/IMG/companyLogos/🖥-Landing-Pages.png" alt="">
+                <img src="/IMG/companyLogos/6 (1).png" alt="">
+                <img src="/IMG/companyLogos/9 (2).png" alt="">
+                <img src="/IMG/companyLogos/Page-1 (1).png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="company-features">
+        <div class="container">
+            <div class="features">
+                <p>Features</p>
+                <h3>Our accounting is trusted by thousands of companies</h3>
+                <a class="btn-yellow" href="#">Learn more<i class="fa-solid fa-arrow-up-right"></i></a>
+            </div>
+            
+            <div class="company-features-icons">
+                <div class="iconStack">
+                    <i class="fa-sharp fa-light fa-handshake"></i>
+                    <h4>Business advice</h4>
+                    <p><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="iconStack"><i class="fa-regular fa-lightbulb-on"></i>
+                    <h4>Start-up business</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</div>
+                <div class="iconStack"><i class="fa-solid fa-chart-mixed-up-circle-dollar"></i>
+                    <h3>Financial advice</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p></div>
+                <div class="iconStack"><i class="fa-sharp fa-regular fa-cube"></i>
+                    <h3>Risk Management</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p></div>
+            </div>
+
         </div>
     </section>
     
