--- a/HTML/index.html
+++ b/HTML/index.html
@@ -89,14 +89,14 @@
             <div class="company-features-icons">
                 <div class="iconStack">
                     <i class="fa-sharp fa-light fa-handshake"></i>
-                    <h4>Business advice</h4>
+                    <h4>Business Advice</h4>
                     <p><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="iconStack"><i class="fa-regular fa-lightbulb-on"></i>
-                    <h4>Start-up business</h4>
+                    <h4>Start-up Business</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</div>
                 <div class="iconStack"><i class="fa-solid fa-chart-mixed-up-circle-dollar"></i>
-                    <h3>Financial advice</h4>
+                    <h3>Financial Advice</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p></div>
                 <div class="iconStack"><i class="fa-sharp fa-regular fa-cube"></i>
                     <h3>Risk Management</h4>
@@ -105,7 +105,20 @@
 
         </div>
     </section>
-    
+
+    <section class="aboutCompany">
+        <div class="container">
+            <img src="/IMG/Image (4).png" alt="">
+            <div class="aboutCompanyContent">
+                <h4>About Company</h4>
+                <h3>We are business consulting & credit repair access</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam officiis quas assumenda esse obcaecati? Ex esse error voluptates iure vel totam eos. <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse quasi incidunt adipisci accusantium libero provident voluptate amet.
+                </p>
+                <a class="btn-black" href="#">Learn more</a>
+                <a class="play-button" href="#"><i class="fa-regular fa-circle-play fa-2XL"></i> Play Video</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
 
