--- a/HTML/index.html
+++ b/HTML/index.html
@@ -111,7 +111,7 @@
             <img src="/IMG/Image (4).png" alt="">
             <div class="aboutCompanyContent">
                 <h4>About Company</h4>
-                <h3>We are business consulting & credit repair access</h3>
+                <h3>We Are Business Consulting & Credit Repair Access</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam officiis quas assumenda esse obcaecati? Ex esse error voluptates iure vel totam eos. <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse quasi incidunt adipisci accusantium libero provident voluptate amet.
                 </p>
                 <a class="btn-black" href="#">Learn more</a>
@@ -119,6 +119,8 @@
             </div>
         </div>
     </section>
+
+
 </body>
 </html>
 
