--- a/HTML/index.html
+++ b/HTML/index.html
@@ -113,7 +113,9 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam officiis quas assumenda esse obcaecati? Ex esse error voluptates iure vel totam eos. <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse quasi incidunt adipisci accusantium libero provident voluptate amet.
                 </p>
                 <div class="icon-pack">
-                <a class="btn-black" href="#">Learn more <i class="fa-solid fa-arrow-up-right"></i></a>
+                    <div class="arrowbox">
+                        <a class="btn-black" href="#">Learn more <i class="fa-light fa-arrow-up-right"></i></a>
+                    </div>
                 <a class="play-button" href="#"><i class="fa-regular fa-circle-play fa-2XL"></i> Play Video</a>
                 </div>
             </div>
@@ -130,33 +132,33 @@
                     <h4>Business Advice</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</p>
                     <div class="icon-square">
-                        <i class="fa-regular fa-circle-play fa-L"></i>
+                        <i class="fa-light fa-arrow-right"></i>
                     </div>
                 </a>
                 <a class="squares-button" href="">
                     <h4>Startup Business</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</p>
                     <div class="icon-square">
-                        <i class="fa-regular fa-circle-play fa-L"></i>
+                        <i class="fa-light fa-arrow-right"></i>
                     </div>
                 </a>
                 <a class="squares-button" href="">
                     <h4>Financial Advice</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</p>
                     <div class="icon-square">
-                        <i class="fa-regular fa-circle-play fa-L"></i>
+                        <i class="fa-light fa-arrow-right"></i>
                     </div>
                 </a>
                 <a class="squares-button" href="">
                     <h4>Business Advice</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</p>
                         <div class="icon-square">
-                            <i class="fa-regular fa-circle-play fa-L"></i>
+                            <i class="fa-light fa-arrow-right"></i>
                         </div>
                 </a>
             </div>
                 <div class="singleButton">
-                    <a class="btn-transparent" href="#">Browse Services <i class="fa-solid fa-arrow-up-right"></i></a>
+                    <a class="btn-transparent-mid" href="#">Browse Services <i class="fa-solid fa-arrow-up-right"></i></a>
                 </div>
         </div>
     </section>
