--- a/HTML/index.html
+++ b/HTML/index.html
@@ -163,6 +163,12 @@
         </div>
     </section>
 
+    <section class="whyChooseUs">
+        <div class="container">
+
+        </div>
+    </section>
+
 </body>
 </html>
 
