--- a/HTML/index.html
+++ b/HTML/index.html
@@ -231,9 +231,51 @@
                 <h3>Project & Case Studies</h3>
                 <h4>Let’s Looks Our Global Projects</h4>
             </div>
+
             <div class="global-projects-box">
+                <div class="box-container"> 
+                    <img src="/IMG/GlobalProj/Image (5).png" alt="">
+                    <h4>Grow your business</h4>
+                    <a class="linkB" href="#">
+                        <span>Read more</span> 
+                        <i class="fa-light fa-arrow-up-right"></i>
+                    </a>
+                </div>
+
+                <div class="box-container"> 
+                    <img src="/IMG/GlobalProj/Image (6).png" alt="">
+                    <h4>Grow your business</h4>
+                    <a class="linkB" href="#">
+                        <span>Read more</span> 
+                        <i class="fa-light fa-arrow-up-right"></i>
+                    </a>
+                </div>
+
+                <div class="box-container"> 
+                    <img src="/IMG/GlobalProj/Image (7).png" alt="">
+                    <h4>Grow your business</h4>
+                    <a class="linkB" href="#">
+                        <span>Read more</span> 
+                        <i class="fa-light fa-arrow-up-right"></i>
+                    </a>
+                </div>
+
+                <div class="box-container"> 
+                    <img src="/IMG/GlobalProj/Image (8).png" alt="">
+                    <h4>Grow your business</h4>
+                    <a class="linkB" href="#">
+                        <span>Read more</span> 
+                        <i class="fa-light fa-arrow-up-right"></i>
+                    </a>
+                </div>
 
             </div>
+
+            
+
+            <a class="btn-black" href="#"><span>All recent projects</span> <i class="fa-solid fa-arrow-up-right"></i></a>
+            
+
         </div>
     </section>
 
