--- a/HTML/index.html
+++ b/HTML/index.html
@@ -244,7 +244,8 @@
 
                 <div class="box-container"> 
                     <img src="/IMG/GlobalProj/Image (6).png" alt="">
-                    <h4>Grow your business</h4>
+                    <h4>Why your client needs a responsive website
+                    </h4>
                     <a class="linkB" href="#">
                         <span>Read more</span> 
                         <i class="fa-light fa-arrow-up-right"></i>
@@ -253,7 +254,8 @@
 
                 <div class="box-container"> 
                     <img src="/IMG/GlobalProj/Image (7).png" alt="">
-                    <h4>Grow your business</h4>
+                    <h4>Educate your employees to get better results
+                    </h4>
                     <a class="linkB" href="#">
                         <span>Read more</span> 
                         <i class="fa-light fa-arrow-up-right"></i>
@@ -262,7 +264,7 @@
 
                 <div class="box-container"> 
                     <img src="/IMG/GlobalProj/Image (8).png" alt="">
-                    <h4>Grow your business</h4>
+                    <h4>Business Insights is a important piece of your business</h4>
                     <a class="linkB" href="#">
                         <span>Read more</span> 
                         <i class="fa-light fa-arrow-up-right"></i>
@@ -273,7 +275,7 @@
 
             
 
-            <a class="btn-black" href="#"><span>All recent projects</span> <i class="fa-solid fa-arrow-up-right"></i></a>
+            <a class="btn-black-btm" href="#"><span>All recent projects</span> <i class="fa-solid fa-arrow-up-right"></i></a>
             
 
         </div>
