--- a/HTML/index.html
+++ b/HTML/index.html
@@ -358,7 +358,8 @@
                         
                         <div class="text-stack">
                             <h4>Amanda Tulling</h4>
-                            <p class="business">Business Manager, Dorfus</p>
+                            <p class="business">Senior Developer, Square
+                            </p>
                         </div>
 
                     </div>
@@ -376,7 +377,7 @@
                         
                         <div class="text-stack">
                             <h4>Jack McDouglas</h4>
-                            <p class="business">Business Manager, Dorfus</p>
+                            <p class="business">Key Account Manager, Gobona</p>
                         </div>
                     </div>
                 </div>
