--- a/HTML/index.html
+++ b/HTML/index.html
@@ -113,7 +113,7 @@
                     <h3>Risk Management</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
-                
+
             </div>
 
         </div>
@@ -425,7 +425,7 @@
             </div>
 
             <div class="bottom-section">
-                <a class="all-reviews-btn" href="#"><span>All recent All Reviews</span> <i class="fa-solid fa-arrow-up-right"></i></a>
+                <a class="all-reviews-btn" href="#"><span>All Reviews</span> <i class="fa-solid fa-arrow-up-right"></i></a>
             </div>
 
             
