--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -53,6 +53,60 @@
         </div>
 </header>
 
+<section class="connect-header">
+<div class="stripes-connect">
+    <img src="/IMG/Stripes/Rectangle 607 (5).png" alt="">
+</div>    
+    <div class="container">
+        <div class="top-nav-bar">
+            <p class="home-tag">Home</p>
+            <p class="contact-tag">Contact</p>
+        </div>
+
+        <h3>Let’s Connect</h3>
+    </div>
+</section>
+
+<section class="connect-options">
+    <div class="container">
+        <div class="connect-box">
+            <div class="connect-itemstack">
+                <div class="circle-black">
+                    <i class="fa-solid fa-location-dot"></i>
+                </div>
+                <div class="stack-text">
+                    <h3>Visit us</h3>
+                    <p>Sveavägen 31</p>
+                    <p>111 34 STOCKHOLM</p>
+                </div>
+            </div>
+
+            <div class="connect-itemstack">
+                <div class="circle-black">
+                    <i class="fa-solid fa-phone"></i>
+                </div>
+                <div class="stack-text">
+                    <h3>Call us</h3>
+                    <p>+46 (8) 121 470 50</p>
+                    <p>+46 (8) 121 470 51</p>
+                </div>
+            </div>
+
+            <div class="connect-itemstack">
+                <div class="circle-black">
+                    <i class="fa-solid fa-envelope"></i>
+                </div>
+                <div class="stack-text">
+                    <h3>Email us</h3>
+                    <p>info@crito.com1</p>
+                    <p>support@crito.com</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
 <section class="bottom-section1">
     <div class="container">
         <div class="picture-text-div">
