--- a/HTML/index.html
+++ b/HTML/index.html
@@ -42,10 +42,10 @@
                 </div>
                 <div class="main-menu">
                     <nav>
-                        <a href="#">Home</a>
+                        <a href="index.html">Home</a>
                         <a href="#">Service</a>
                         <a href="#">News</a>
-                        <a href="#">Contact</a>
+                        <a href="index1.html">Contact</a>
                     </nav>
                     <a class="btn-yellow" href="#">Login <i class="fa-solid fa-arrow-up-right"></i></a>
                 </div> 
@@ -197,9 +197,9 @@
                 </div>   
         </div>
 
-        <div class="stripes-right">
+        <!-- <div class="stripes-right">
             <img src="/IMG/Stripes/Rectangle 607 (3).png" alt="">
-        </div>
+        </div> -->
     </section>
 
     <section class="whyChooseUs">
@@ -568,10 +568,6 @@
 
             </div>
                 
-
-        </div>
-        <div class="last-line-part">
-            <img src="/IMG/Stripes/Rectangle 116.png" alt="">
 
         </div>
           
