--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -67,7 +67,7 @@
     <section class="connect-options">
         <div class="container">
             <div class="connect-box">
-                <div class="connect-itemstack">
+                <a class="connect-itemstack" href="">
                     <div class="circle-black">
                         <i class="fa-solid fa-location-dot"></i>
                     </div>
@@ -76,9 +76,9 @@
                         <p>Sveavägen 31</p>
                         <p>111 34 STOCKHOLM</p>
                     </div>
-                </div>
+                </a>
 
-                <div class="connect-itemstack">
+                <a class="connect-itemstack" href="">
                     <div class="circle-black">
                         <i class="fa-solid fa-phone"></i>
                     </div>
@@ -87,18 +87,18 @@
                         <p>+46 (8) 121 470 50</p>
                         <p>+46 (8) 121 470 51</p>
                     </div>
-                </div>
+                </a>
 
-                <div class="connect-itemstack">
+                <a class="connect-itemstack" href="">
                     <div class="circle-black">
                         <i class="fa-solid fa-envelope"></i>
                     </div>
                     <div class="stack-text">
                         <h3>Email us</h3>
-                        <p>info@crito.com1</p>
+                        <p>info@crito.com</p>
                         <p>support@crito.com</p>
                     </div>
-                </div>
+                </a>
 
             </div>
         </div>
@@ -124,7 +124,7 @@
         </div>
     </section>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2034.7793915112914!2d18.057139594640827!3d59.336636909172014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d6799554e87%3A0x6562d2c842903003!2sSveav%C3%A4gen%2031%2C%20111%2034%20Stockholm!5e0!3m2!1ssv!2sse!4v1695721862257!5m2!1ssv!2sse" width="100%" display="block" height="620" style="border:0;" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2034.7793915112914!2d18.057139594640827!3d59.336636909172014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d6799554e87%3A0x6562d2c842903003!2sSveav%C3%A4gen%2031%2C%20111%2034%20Stockholm!5e0!3m2!1ssv!2sse!4v1695721862257!5m2!1ssv!2sse" width="100%" display="block" height="620" style="border:0;" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <section class="bottom-section1">
         <div class="container">
