--- a/HTML/index.html
+++ b/HTML/index.html
@@ -282,43 +282,43 @@
 
             <div class="global-projects-box">
                 
-                <div class="box-container"> 
+                <a class="box-container" href="#"> 
                     <img src="/IMG/GlobalProj/Image (5).png" alt="">
                     <h4>Grow your business</h4>
-                    <a class="linkB" href="#">
+                    <div class="linkB">
                         <span>Read more</span> 
                         <i class="fa-light fa-arrow-up-right"></i>
-                    </a>
-                </div>
+                    </div>
+                </a>
 
-                <div class="box-container"> 
+                <a class="box-container" href="#"> 
                     <img src="/IMG/GlobalProj/Image (6).png" alt="">
                     <h4>Why your client needs a responsive website
                     </h4>
-                    <a class="linkB" href="#">
+                    <div class="linkB">
                         <span>Read more</span> 
                         <i class="fa-light fa-arrow-up-right"></i>
-                    </a>
-                </div>
+                    </div>
+                </a>
 
-                <div class="box-container"> 
+                <a class="box-container" href="#"> 
                     <img src="/IMG/GlobalProj/Image (7).png" alt="">
                     <h4>Educate your employees to get better results
                     </h4>
-                    <a class="linkB" href="#">
+                    <div class="linkB">
                         <span>Read more</span> 
                         <i class="fa-light fa-arrow-up-right"></i>
-                    </a>
-                </div>
+                    </div>
+                </a>
 
-                <div class="box-container"> 
+                <a class="box-container" href="#"> 
                     <img src="/IMG/GlobalProj/Image (8).png" alt="">
                     <h4>Business Insights is a important piece of your business</h4>
-                    <a class="linkB" href="#">
+                    <div class="linkB">
                         <span>Read more</span> 
                         <i class="fa-light fa-arrow-up-right"></i>
-                    </a>
-                </div>
+                    </div>
+                </a>
 
             </div>
             <a class="btn-black-btm" href="#"><span>All recent projects</span> <i class="fa-solid fa-arrow-up-right"></i></a>
