--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -142,8 +142,8 @@
                         <h4>Company</h4> 
                         <a href="">About</a>
                         <a href="">Features</a>
+                        <a href="">Work</a>
                         <a href="">Career</a>
-                        <a href="">About</a>
                     </div>
 
                     
