--- a/HTML/index.html
+++ b/HTML/index.html
@@ -92,7 +92,7 @@
             <div class="company-features-icons">
                 
                 <div class="iconStack">
-                    <i class="fa-sharp fa-light fa-handshake"></i>
+                    <i class="fa-regular fa-light fa-handshake"></i>
                     <h3>Business Advice</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
@@ -104,7 +104,7 @@
                 </div>
 
                 <div class="iconStack">
-                    <i class="fa-solid fa-chart-mixed-up-circle-dollar"></i>
+                    <i class="fa-regular fa-chart-mixed-up-circle-dollar"></i>
                     <h3>Financial Advice</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
